<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_main_item_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:src="@drawable/thumb_toe"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_main_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/item_name"/>
        <TextView
            android:id="@+id/tv_main_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_category"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_main_item_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        tools:text="@string/item_price"
        tools:ignore="RtlCompat" />
</LinearLayout>